# django-vacancy

./: README.md  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  urls.py  views.py
ads/management/commands/: load_ads.py
ads/migrations/: 0005_category_slug.py  0006_alter_ads_name_alter_ads_price.py
bulletin_board/: settings.py  urls.py
selection/: admin.py  models.py  serializers.py  urls.py  views.py
selection/migrations/: 0001_initial.py
tests/: ads_create_test.py  ads_get_one_test.py  ads_list_test.py  conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_get_one_test.py  ads_list_test.py
tests/selection/: selection_get_one_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0004_alter_location_name.py  0005_alter_user_managers_user_date_joined_user_email_and_more.py  0006_user_birth_date_alter_user_email.py  0007_alter_user_age_alter_user_email.py
